compiler/parser.output
   0  $accept : %entry% $end

   1  program : stmt_list EOF

   2  stmt_list :
   3            | stmt_list stmt

   4  stmt : expr SEMICOLUMN
   5       | func_decl
   6       | RETURN SEMICOLUMN
   7       | RETURN expr SEMICOLUMN
   8       | FOR LEFTROUNDBRACKET for_expr SEMICOLUMN expr SEMICOLUMN for_expr RIGHTROUNDBRACKET LEFTCURLYBRACKET stmt_list RIGHTCURLYBRACKET
   9       | IF LEFTROUNDBRACKET expr RIGHTROUNDBRACKET LEFTCURLYBRACKET stmt_list RIGHTCURLYBRACKET ELSE LEFTCURLYBRACKET stmt_list RIGHTCURLYBRACKET
  10       | IF LEFTROUNDBRACKET expr RIGHTROUNDBRACKET LEFTCURLYBRACKET stmt_list RIGHTCURLYBRACKET
  11       | WHILE LEFTROUNDBRACKET expr RIGHTROUNDBRACKET LEFTCURLYBRACKET stmt_list RIGHTCURLYBRACKET
  12       | var_decl SEMICOLUMN

  13  var_decl : var_type ID
  14           | var_type ID ASSIGN expr

  15  var_type : VOID
  16           | NULL
  17           | INT
  18           | FLOAT
  19           | STRING
  20           | BOOL
  21           | NODE
  22           | GRAPH
  23           | DICT SMALLER INT GREATER
  24           | DICT SMALLER FLOAT GREATER
  25           | DICT SMALLER STRING GREATER
  26           | DICT SMALLER NODE GREATER
  27           | DICT SMALLER GRAPH GREATER
  28           | LIST SMALLER INT GREATER
  29           | LIST SMALLER FLOAT GREATER
  30           | LIST SMALLER STRING GREATER
  31           | LIST SMALLER BOOL GREATER
  32           | LIST SMALLER NODE GREATER
  33           | LIST SMALLER GRAPH GREATER

  34  formal_list :
  35              | formal
  36              | formal_list SEQUENCE formal

  37  formal : var_type ID

  38  func_decl : var_type ID LEFTROUNDBRACKET formal_list RIGHTROUNDBRACKET LEFTCURLYBRACKET stmt_list RIGHTCURLYBRACKET

  39  for_expr :
  40           | expr

  41  expr : literals
  42       | NULL
  43       | arith_ops
  44       | NODE LEFTROUNDBRACKET expr RIGHTROUNDBRACKET
  45       | ID
  46       | ID ASSIGN expr
  47       | LEFTBRACKET list RIGHTBRACKET
  48       | LEFTCURLYBRACKET dict RIGHTCURLYBRACKET
  49       | LEFTROUNDBRACKET expr RIGHTROUNDBRACKET
  50       | ID LEFTROUNDBRACKET list RIGHTROUNDBRACKET
  51       | INT LEFTROUNDBRACKET list RIGHTROUNDBRACKET
  52       | FLOAT LEFTROUNDBRACKET list RIGHTROUNDBRACKET
  53       | BOOL LEFTROUNDBRACKET list RIGHTROUNDBRACKET
  54       | STRING LEFTROUNDBRACKET list RIGHTROUNDBRACKET
  55       | expr DOT ID LEFTROUNDBRACKET list RIGHTROUNDBRACKET
  56       | SPLIT splits SPLIT

  57  list :
  58       | expr
  59       | list SEQUENCE expr

  60  edgeAssign : ID COLUMN expr WEIGHTED ID

  61  splits : edgeAssign
  62         | splits SEQUENCE edgeAssign

  63  dict_key_value : expr COLUMN expr

  64  dict :
  65       | dict_key_value
  66       | dict SEQUENCE dict_key_value

  67  arith_ops : expr PLUS expr
  68            | expr MINUS expr
  69            | expr TIMES expr
  70            | expr DIVIDE expr
  71            | expr EQUAL expr
  72            | expr NOTEQUAL expr
  73            | expr SMALLER expr
  74            | expr SMALLEREQUAL expr
  75            | expr GREATER expr
  76            | expr GREATEREQUAL expr
  77            | expr AND expr
  78            | expr MOD expr
  79            | expr OR expr
  80            | NOT expr
  81            | MINUS expr

  82  literals : INT_LITERAL
  83           | FLOAT_LITERAL
  84           | STRING_LITERAL
  85           | BOOL_LITERAL

  86  %entry% : '\001' program

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . program  (86)
	stmt_list : .  (2)

	.  reduce 2

	program  goto 3
	stmt_list  goto 4


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	%entry% : '\001' program .  (86)

	.  reduce 86


state 4
	program : stmt_list . EOF  (1)
	stmt_list : stmt_list . stmt  (3)

	MINUS  shift 5
	SPLIT  shift 6
	NOT  shift 7
	IF  shift 8
	FOR  shift 9
	WHILE  shift 10
	RETURN  shift 11
	INT  shift 12
	FLOAT  shift 13
	STRING  shift 14
	BOOL  shift 15
	NODE  shift 16
	GRAPH  shift 17
	LIST  shift 18
	DICT  shift 19
	NULL  shift 20
	VOID  shift 21
	LEFTBRACKET  shift 22
	LEFTCURLYBRACKET  shift 23
	LEFTROUNDBRACKET  shift 24
	EOF  shift 25
	ID  shift 26
	INT_LITERAL  shift 27
	STRING_LITERAL  shift 28
	FLOAT_LITERAL  shift 29
	BOOL_LITERAL  shift 30
	.  error

	stmt  goto 31
	expr  goto 32
	func_decl  goto 33
	var_decl  goto 34
	var_type  goto 35
	literals  goto 36
	arith_ops  goto 37


state 5
	arith_ops : MINUS . expr  (81)

	MINUS  shift 5
	SPLIT  shift 6
	NOT  shift 7
	INT  shift 38
	FLOAT  shift 39
	STRING  shift 40
	BOOL  shift 41
	NODE  shift 42
	NULL  shift 43
	LEFTBRACKET  shift 22
	LEFTCURLYBRACKET  shift 23
	LEFTROUNDBRACKET  shift 24
	ID  shift 26
	INT_LITERAL  shift 27
	STRING_LITERAL  shift 28
	FLOAT_LITERAL  shift 29
	BOOL_LITERAL  shift 30
	.  error

	expr  goto 44
	literals  goto 36
	arith_ops  goto 37


state 6
	expr : SPLIT . splits SPLIT  (56)

	ID  shift 45
	.  error

	splits  goto 46
	edgeAssign  goto 47


state 7
	arith_ops : NOT . expr  (80)

	MINUS  shift 5
	SPLIT  shift 6
	NOT  shift 7
	INT  shift 38
	FLOAT  shift 39
	STRING  shift 40
	BOOL  shift 41
	NODE  shift 42
	NULL  shift 43
	LEFTBRACKET  shift 22
	LEFTCURLYBRACKET  shift 23
	LEFTROUNDBRACKET  shift 24
	ID  shift 26
	INT_LITERAL  shift 27
	STRING_LITERAL  shift 28
	FLOAT_LITERAL  shift 29
	BOOL_LITERAL  shift 30
	.  error

	expr  goto 48
	literals  goto 36
	arith_ops  goto 37


state 8
	stmt : IF . LEFTROUNDBRACKET expr RIGHTROUNDBRACKET LEFTCURLYBRACKET stmt_list RIGHTCURLYBRACKET ELSE LEFTCURLYBRACKET stmt_list RIGHTCURLYBRACKET  (9)
	stmt : IF . LEFTROUNDBRACKET expr RIGHTROUNDBRACKET LEFTCURLYBRACKET stmt_list RIGHTCURLYBRACKET  (10)

	LEFTROUNDBRACKET  shift 49
	.  error


state 9
	stmt : FOR . LEFTROUNDBRACKET for_expr SEMICOLUMN expr SEMICOLUMN for_expr RIGHTROUNDBRACKET LEFTCURLYBRACKET stmt_list RIGHTCURLYBRACKET  (8)

	LEFTROUNDBRACKET  shift 50
	.  error


state 10
	stmt : WHILE . LEFTROUNDBRACKET expr RIGHTROUNDBRACKET LEFTCURLYBRACKET stmt_list RIGHTCURLYBRACKET  (11)

	LEFTROUNDBRACKET  shift 51
	.  error


state 11
	stmt : RETURN . SEMICOLUMN  (6)
	stmt : RETURN . expr SEMICOLUMN  (7)

	MINUS  shift 5
	SEMICOLUMN  shift 52
	SPLIT  shift 6
	NOT  shift 7
	INT  shift 38
	FLOAT  shift 39
	STRING  shift 40
	BOOL  shift 41
	NODE  shift 42
	NULL  shift 43
	LEFTBRACKET  shift 22
	LEFTCURLYBRACKET  shift 23
	LEFTROUNDBRACKET  shift 24
	ID  shift 26
	INT_LITERAL  shift 27
	STRING_LITERAL  shift 28
	FLOAT_LITERAL  shift 29
	BOOL_LITERAL  shift 30
	.  error

	expr  goto 53
	literals  goto 36
	arith_ops  goto 37


state 12
	var_type : INT .  (17)
	expr : INT . LEFTROUNDBRACKET list RIGHTROUNDBRACKET  (51)

	LEFTROUNDBRACKET  shift 54
	ID  reduce 17


state 13
	var_type : FLOAT .  (18)
	expr : FLOAT . LEFTROUNDBRACKET list RIGHTROUNDBRACKET  (52)

	LEFTROUNDBRACKET  shift 55
	ID  reduce 18


state 14
	var_type : STRING .  (19)
	expr : STRING . LEFTROUNDBRACKET list RIGHTROUNDBRACKET  (54)

	LEFTROUNDBRACKET  shift 56
	ID  reduce 19


state 15
	var_type : BOOL .  (20)
	expr : BOOL . LEFTROUNDBRACKET list RIGHTROUNDBRACKET  (53)

	LEFTROUNDBRACKET  shift 57
	ID  reduce 20


state 16
	var_type : NODE .  (21)
	expr : NODE . LEFTROUNDBRACKET expr RIGHTROUNDBRACKET  (44)

	LEFTROUNDBRACKET  shift 58
	ID  reduce 21


state 17
	var_type : GRAPH .  (22)

	.  reduce 22


state 18
	var_type : LIST . SMALLER INT GREATER  (28)
	var_type : LIST . SMALLER FLOAT GREATER  (29)
	var_type : LIST . SMALLER STRING GREATER  (30)
	var_type : LIST . SMALLER BOOL GREATER  (31)
	var_type : LIST . SMALLER NODE GREATER  (32)
	var_type : LIST . SMALLER GRAPH GREATER  (33)

	SMALLER  shift 59
	.  error


state 19
	var_type : DICT . SMALLER INT GREATER  (23)
	var_type : DICT . SMALLER FLOAT GREATER  (24)
	var_type : DICT . SMALLER STRING GREATER  (25)
	var_type : DICT . SMALLER NODE GREATER  (26)
	var_type : DICT . SMALLER GRAPH GREATER  (27)

	SMALLER  shift 60
	.  error


state 20
	var_type : NULL .  (16)
	expr : NULL .  (42)

	PLUS  reduce 42
	MINUS  reduce 42
	TIMES  reduce 42
	DIVIDE  reduce 42
	MOD  reduce 42
	SEMICOLUMN  reduce 42
	DOT  reduce 42
	GREATER  reduce 42
	GREATEREQUAL  reduce 42
	SMALLER  reduce 42
	SMALLEREQUAL  reduce 42
	EQUAL  reduce 42
	NOTEQUAL  reduce 42
	AND  reduce 42
	OR  reduce 42
	ID  reduce 16


state 21
	var_type : VOID .  (15)

	.  reduce 15


state 22
	expr : LEFTBRACKET . list RIGHTBRACKET  (47)
	list : .  (57)

	MINUS  shift 5
	SPLIT  shift 6
	NOT  shift 7
	INT  shift 38
	FLOAT  shift 39
	STRING  shift 40
	BOOL  shift 41
	NODE  shift 42
	NULL  shift 43
	LEFTBRACKET  shift 22
	LEFTCURLYBRACKET  shift 23
	LEFTROUNDBRACKET  shift 24
	ID  shift 26
	INT_LITERAL  shift 27
	STRING_LITERAL  shift 28
	FLOAT_LITERAL  shift 29
	BOOL_LITERAL  shift 30
	SEQUENCE  reduce 57
	RIGHTBRACKET  reduce 57

	expr  goto 61
	literals  goto 36
	arith_ops  goto 37
	list  goto 62


state 23
	expr : LEFTCURLYBRACKET . dict RIGHTCURLYBRACKET  (48)
	dict : .  (64)

	MINUS  shift 5
	SPLIT  shift 6
	NOT  shift 7
	INT  shift 38
	FLOAT  shift 39
	STRING  shift 40
	BOOL  shift 41
	NODE  shift 42
	NULL  shift 43
	LEFTBRACKET  shift 22
	LEFTCURLYBRACKET  shift 23
	LEFTROUNDBRACKET  shift 24
	ID  shift 26
	INT_LITERAL  shift 27
	STRING_LITERAL  shift 28
	FLOAT_LITERAL  shift 29
	BOOL_LITERAL  shift 30
	SEQUENCE  reduce 64
	RIGHTCURLYBRACKET  reduce 64

	expr  goto 63
	literals  goto 36
	arith_ops  goto 37
	dict  goto 64
	dict_key_value  goto 65


state 24
	expr : LEFTROUNDBRACKET . expr RIGHTROUNDBRACKET  (49)

	MINUS  shift 5
	SPLIT  shift 6
	NOT  shift 7
	INT  shift 38
	FLOAT  shift 39
	STRING  shift 40
	BOOL  shift 41
	NODE  shift 42
	NULL  shift 43
	LEFTBRACKET  shift 22
	LEFTCURLYBRACKET  shift 23
	LEFTROUNDBRACKET  shift 24
	ID  shift 26
	INT_LITERAL  shift 27
	STRING_LITERAL  shift 28
	FLOAT_LITERAL  shift 29
	BOOL_LITERAL  shift 30
	.  error

	expr  goto 66
	literals  goto 36
	arith_ops  goto 37


state 25
	program : stmt_list EOF .  (1)

	.  reduce 1


state 26
	expr : ID .  (45)
	expr : ID . ASSIGN expr  (46)
	expr : ID . LEFTROUNDBRACKET list RIGHTROUNDBRACKET  (50)

	ASSIGN  shift 67
	LEFTROUNDBRACKET  shift 68
	PLUS  reduce 45
	MINUS  reduce 45
	TIMES  reduce 45
	DIVIDE  reduce 45
	MOD  reduce 45
	SEMICOLUMN  reduce 45
	SEQUENCE  reduce 45
	COLUMN  reduce 45
	DOT  reduce 45
	GREATER  reduce 45
	GREATEREQUAL  reduce 45
	SMALLER  reduce 45
	SMALLEREQUAL  reduce 45
	EQUAL  reduce 45
	NOTEQUAL  reduce 45
	AND  reduce 45
	OR  reduce 45
	WEIGHTED  reduce 45
	RIGHTBRACKET  reduce 45
	RIGHTCURLYBRACKET  reduce 45
	RIGHTROUNDBRACKET  reduce 45


state 27
	literals : INT_LITERAL .  (82)

	.  reduce 82


state 28
	literals : STRING_LITERAL .  (84)

	.  reduce 84


state 29
	literals : FLOAT_LITERAL .  (83)

	.  reduce 83


state 30
	literals : BOOL_LITERAL .  (85)

	.  reduce 85


state 31
	stmt_list : stmt_list stmt .  (3)

	.  reduce 3


state 32
	stmt : expr . SEMICOLUMN  (4)
	expr : expr . DOT ID LEFTROUNDBRACKET list RIGHTROUNDBRACKET  (55)
	arith_ops : expr . PLUS expr  (67)
	arith_ops : expr . MINUS expr  (68)
	arith_ops : expr . TIMES expr  (69)
	arith_ops : expr . DIVIDE expr  (70)
	arith_ops : expr . EQUAL expr  (71)
	arith_ops : expr . NOTEQUAL expr  (72)
	arith_ops : expr . SMALLER expr  (73)
	arith_ops : expr . SMALLEREQUAL expr  (74)
	arith_ops : expr . GREATER expr  (75)
	arith_ops : expr . GREATEREQUAL expr  (76)
	arith_ops : expr . AND expr  (77)
	arith_ops : expr . MOD expr  (78)
	arith_ops : expr . OR expr  (79)

	PLUS  shift 69
	MINUS  shift 70
	TIMES  shift 71
	DIVIDE  shift 72
	MOD  shift 73
	SEMICOLUMN  shift 74
	DOT  shift 75
	GREATER  shift 76
	GREATEREQUAL  shift 77
	SMALLER  shift 78
	SMALLEREQUAL  shift 79
	EQUAL  shift 80
	NOTEQUAL  shift 81
	AND  shift 82
	OR  shift 83
	.  error


state 33
	stmt : func_decl .  (5)

	.  reduce 5


state 34
	stmt : var_decl . SEMICOLUMN  (12)

	SEMICOLUMN  shift 84
	.  error


state 35
	var_decl : var_type . ID  (13)
	var_decl : var_type . ID ASSIGN expr  (14)
	func_decl : var_type . ID LEFTROUNDBRACKET formal_list RIGHTROUNDBRACKET LEFTCURLYBRACKET stmt_list RIGHTCURLYBRACKET  (38)

	ID  shift 85
	.  error


state 36
	expr : literals .  (41)

	.  reduce 41


state 37
	expr : arith_ops .  (43)

	.  reduce 43


state 38
	expr : INT . LEFTROUNDBRACKET list RIGHTROUNDBRACKET  (51)

	LEFTROUNDBRACKET  shift 54
	.  error


state 39
	expr : FLOAT . LEFTROUNDBRACKET list RIGHTROUNDBRACKET  (52)

	LEFTROUNDBRACKET  shift 55
	.  error


state 40
	expr : STRING . LEFTROUNDBRACKET list RIGHTROUNDBRACKET  (54)

	LEFTROUNDBRACKET  shift 56
	.  error


state 41
	expr : BOOL . LEFTROUNDBRACKET list RIGHTROUNDBRACKET  (53)

	LEFTROUNDBRACKET  shift 57
	.  error


state 42
	expr : NODE . LEFTROUNDBRACKET expr RIGHTROUNDBRACKET  (44)

	LEFTROUNDBRACKET  shift 58
	.  error


state 43
	expr : NULL .  (42)

	.  reduce 42


state 44
	expr : expr . DOT ID LEFTROUNDBRACKET list RIGHTROUNDBRACKET  (55)
	arith_ops : expr . PLUS expr  (67)
	arith_ops : expr . MINUS expr  (68)
	arith_ops : expr . TIMES expr  (69)
	arith_ops : expr . DIVIDE expr  (70)
	arith_ops : expr . EQUAL expr  (71)
	arith_ops : expr . NOTEQUAL expr  (72)
	arith_ops : expr . SMALLER expr  (73)
	arith_ops : expr . SMALLEREQUAL expr  (74)
	arith_ops : expr . GREATER expr  (75)
	arith_ops : expr . GREATEREQUAL expr  (76)
	arith_ops : expr . AND expr  (77)
	arith_ops : expr . MOD expr  (78)
	arith_ops : expr . OR expr  (79)
	arith_ops : MINUS expr .  (81)

	TIMES  shift 71
	DIVIDE  shift 72
	MOD  shift 73
	DOT  shift 75
	PLUS  reduce 81
	MINUS  reduce 81
	SEMICOLUMN  reduce 81
	SEQUENCE  reduce 81
	COLUMN  reduce 81
	GREATER  reduce 81
	GREATEREQUAL  reduce 81
	SMALLER  reduce 81
	SMALLEREQUAL  reduce 81
	EQUAL  reduce 81
	NOTEQUAL  reduce 81
	AND  reduce 81
	OR  reduce 81
	WEIGHTED  reduce 81
	RIGHTBRACKET  reduce 81
	RIGHTCURLYBRACKET  reduce 81
	RIGHTROUNDBRACKET  reduce 81


state 45
	edgeAssign : ID . COLUMN expr WEIGHTED ID  (60)

	COLUMN  shift 86
	.  error


state 46
	expr : SPLIT splits . SPLIT  (56)
	splits : splits . SEQUENCE edgeAssign  (62)

	SEQUENCE  shift 87
	SPLIT  shift 88
	.  error


state 47
	splits : edgeAssign .  (61)

	.  reduce 61


state 48
	expr : expr . DOT ID LEFTROUNDBRACKET list RIGHTROUNDBRACKET  (55)
	arith_ops : expr . PLUS expr  (67)
	arith_ops : expr . MINUS expr  (68)
	arith_ops : expr . TIMES expr  (69)
	arith_ops : expr . DIVIDE expr  (70)
	arith_ops : expr . EQUAL expr  (71)
	arith_ops : expr . NOTEQUAL expr  (72)
	arith_ops : expr . SMALLER expr  (73)
	arith_ops : expr . SMALLEREQUAL expr  (74)
	arith_ops : expr . GREATER expr  (75)
	arith_ops : expr . GREATEREQUAL expr  (76)
	arith_ops : expr . AND expr  (77)
	arith_ops : expr . MOD expr  (78)
	arith_ops : expr . OR expr  (79)
	arith_ops : NOT expr .  (80)

	DOT  shift 75
	PLUS  reduce 80
	MINUS  reduce 80
	TIMES  reduce 80
	DIVIDE  reduce 80
	MOD  reduce 80
	SEMICOLUMN  reduce 80
	SEQUENCE  reduce 80
	COLUMN  reduce 80
	GREATER  reduce 80
	GREATEREQUAL  reduce 80
	SMALLER  reduce 80
	SMALLEREQUAL  reduce 80
	EQUAL  reduce 80
	NOTEQUAL  reduce 80
	AND  reduce 80
	OR  reduce 80
	WEIGHTED  reduce 80
	RIGHTBRACKET  reduce 80
	RIGHTCURLYBRACKET  reduce 80
	RIGHTROUNDBRACKET  reduce 80


state 49
	stmt : IF LEFTROUNDBRACKET . expr RIGHTROUNDBRACKET LEFTCURLYBRACKET stmt_list RIGHTCURLYBRACKET ELSE LEFTCURLYBRACKET stmt_list RIGHTCURLYBRACKET  (9)
	stmt : IF LEFTROUNDBRACKET . expr RIGHTROUNDBRACKET LEFTCURLYBRACKET stmt_list RIGHTCURLYBRACKET  (10)

	MINUS  shift 5
	SPLIT  shift 6
	NOT  shift 7
	INT  shift 38
	FLOAT  shift 39
	STRING  shift 40
	BOOL  shift 41
	NODE  shift 42
	NULL  shift 43
	LEFTBRACKET  shift 22
	LEFTCURLYBRACKET  shift 23
	LEFTROUNDBRACKET  shift 24
	ID  shift 26
	INT_LITERAL  shift 27
	STRING_LITERAL  shift 28
	FLOAT_LITERAL  shift 29
	BOOL_LITERAL  shift 30
	.  error

	expr  goto 89
	literals  goto 36
	arith_ops  goto 37


state 50
	stmt : FOR LEFTROUNDBRACKET . for_expr SEMICOLUMN expr SEMICOLUMN for_expr RIGHTROUNDBRACKET LEFTCURLYBRACKET stmt_list RIGHTCURLYBRACKET  (8)
	for_expr : .  (39)

	MINUS  shift 5
	SPLIT  shift 6
	NOT  shift 7
	INT  shift 38
	FLOAT  shift 39
	STRING  shift 40
	BOOL  shift 41
	NODE  shift 42
	NULL  shift 43
	LEFTBRACKET  shift 22
	LEFTCURLYBRACKET  shift 23
	LEFTROUNDBRACKET  shift 24
	ID  shift 26
	INT_LITERAL  shift 27
	STRING_LITERAL  shift 28
	FLOAT_LITERAL  shift 29
	BOOL_LITERAL  shift 30
	SEMICOLUMN  reduce 39

	expr  goto 90
	for_expr  goto 91
	literals  goto 36
	arith_ops  goto 37


state 51
	stmt : WHILE LEFTROUNDBRACKET . expr RIGHTROUNDBRACKET LEFTCURLYBRACKET stmt_list RIGHTCURLYBRACKET  (11)

	MINUS  shift 5
	SPLIT  shift 6
	NOT  shift 7
	INT  shift 38
	FLOAT  shift 39
	STRING  shift 40
	BOOL  shift 41
	NODE  shift 42
	NULL  shift 43
	LEFTBRACKET  shift 22
	LEFTCURLYBRACKET  shift 23
	LEFTROUNDBRACKET  shift 24
	ID  shift 26
	INT_LITERAL  shift 27
	STRING_LITERAL  shift 28
	FLOAT_LITERAL  shift 29
	BOOL_LITERAL  shift 30
	.  error

	expr  goto 92
	literals  goto 36
	arith_ops  goto 37


state 52
	stmt : RETURN SEMICOLUMN .  (6)

	.  reduce 6


state 53
	stmt : RETURN expr . SEMICOLUMN  (7)
	expr : expr . DOT ID LEFTROUNDBRACKET list RIGHTROUNDBRACKET  (55)
	arith_ops : expr . PLUS expr  (67)
	arith_ops : expr . MINUS expr  (68)
	arith_ops : expr . TIMES expr  (69)
	arith_ops : expr . DIVIDE expr  (70)
	arith_ops : expr . EQUAL expr  (71)
	arith_ops : expr . NOTEQUAL expr  (72)
	arith_ops : expr . SMALLER expr  (73)
	arith_ops : expr . SMALLEREQUAL expr  (74)
	arith_ops : expr . GREATER expr  (75)
	arith_ops : expr . GREATEREQUAL expr  (76)
	arith_ops : expr . AND expr  (77)
	arith_ops : expr . MOD expr  (78)
	arith_ops : expr . OR expr  (79)

	PLUS  shift 69
	MINUS  shift 70
	TIMES  shift 71
	DIVIDE  shift 72
	MOD  shift 73
	SEMICOLUMN  shift 93
	DOT  shift 75
	GREATER  shift 76
	GREATEREQUAL  shift 77
	SMALLER  shift 78
	SMALLEREQUAL  shift 79
	EQUAL  shift 80
	NOTEQUAL  shift 81
	AND  shift 82
	OR  shift 83
	.  error


state 54
	expr : INT LEFTROUNDBRACKET . list RIGHTROUNDBRACKET  (51)
	list : .  (57)

	MINUS  shift 5
	SPLIT  shift 6
	NOT  shift 7
	INT  shift 38
	FLOAT  shift 39
	STRING  shift 40
	BOOL  shift 41
	NODE  shift 42
	NULL  shift 43
	LEFTBRACKET  shift 22
	LEFTCURLYBRACKET  shift 23
	LEFTROUNDBRACKET  shift 24
	ID  shift 26
	INT_LITERAL  shift 27
	STRING_LITERAL  shift 28
	FLOAT_LITERAL  shift 29
	BOOL_LITERAL  shift 30
	SEQUENCE  reduce 57
	RIGHTROUNDBRACKET  reduce 57
